# haskell-rust-experiments

./: README.md
HSfoo/: Cargo.toml  build.rs
HSfoo/hsbits/: Foo.hs  foo.cabal  mylinker.hs
HSfoo/src/: lib.rs
foo/: Cargo.toml
foo/src/: main.rs
haskell/: Cargo.toml  build.rs
haskell/hsbits/: HSBits.hs  Setup.hs  rust-haskell-hsbits.cabal
haskell/src/: lib.rs
