name:                foo
version:             0.1.0.0
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Foo
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
